--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <nav class="navbar navbar-expand-lg p-4">
           <div class="container-fluid">
             <a class="navbar-brand" href="#"
-              ><img src="/images/logo.svg" alt="logo"
+              ><img src="./images/logo.svg" alt="logo"
             /></a>
             <button
               class="navbar-toggler"
@@ -75,7 +75,7 @@
         </nav>
         <div class="header-heading">
           <h1>We are creatives</h1>
-          <img src="/images/icon-arrow-down.svg" alt="arrow-down" />
+          <img src="./images/icon-arrow-down.svg" alt="arrow-down" />
         </div>
       </div>
       <div class="about-us container-fluid" id="About">
@@ -95,7 +95,7 @@
           </div>
           <div class="col-lg-6 order-md-2 order-1">
             <img
-              src="/images/desktop/image-transform.jpg"
+              src="./images/desktop/image-transform.jpg"
               class="img-fluid"
               alt=""
             />
@@ -104,7 +104,7 @@
         <div class="row">
           <div class="col-lg-6">
             <img
-              src="/images/desktop/image-stand-out.jpg"
+              src="./images/desktop/image-stand-out.jpg"
               class="img-fluid"
               alt=""
             />
@@ -126,7 +126,7 @@
         <div class="row">
           <div class="col-lg-6">
             <img
-              src="/images/desktop/image-graphic-design.jpg"
+              src="./images/desktop/image-graphic-design.jpg"
               class="img-fluid"
               alt="Graphic-design"
             />
@@ -141,7 +141,7 @@
           </div>
           <div class="col-lg-6">
             <img
-              src="/images/desktop/image-photography.jpg"
+              src="./images/desktop/image-photography.jpg"
               class="img-fluid"
               alt="Graphic-design"
             />
@@ -161,7 +161,7 @@
           <h2 class="testimonial-header">Client testimonials</h2>
           <div class="row">
             <div class="testimonial">
-              <img src="/images/image-emily.jpg" alt="image-emily" />
+              <img src="./images/image-emily.jpg" alt="image-emily" />
               <p class="testimonial-text">
                 We put our trust in Sunnyside and they delivered, making sure
                 our needs were met and deadlines were always hit.
@@ -170,7 +170,7 @@
               <p class="author-des">Marketing Director</p>
             </div>
             <div class="testimonial">
-              <img src="/images/image-thomas.jpg" alt="image-thomas" />
+              <img src="./images/image-thomas.jpg" alt="image-thomas" />
               <p class="testimonial-text">
                 Sunnyside’s enthusiasm coupled with their keen interest in our
                 brand’s success made it a satisfying and enjoyable experience.
@@ -179,7 +179,7 @@
               <p class="author-des">Chief Operating Officer</p>
             </div>
             <div class="testimonial">
-              <img src="/images/image-jennie.jpg" alt="image-jennie" />
+              <img src="./images/image-jennie.jpg" alt="image-jennie" />
               <p class="testimonial-text">
                 Incredible end result! Our sales increased over 400% when we
                 worked with Sunnyside. Highly recommended!
@@ -194,23 +194,23 @@
         <div class="container-fluid">
           <div class="row">
             <div class="photo">
-              <img src="/images/desktop/image-gallery-milkbottles.jpg" alt="" />
+              <img src="./images/desktop/image-gallery-milkbottles.jpg" alt="" />
             </div>
             <div class="photo">
-              <img src="/images/desktop/image-gallery-orange.jpg" alt="" />
+              <img src="./images/desktop/image-gallery-orange.jpg" alt="" />
             </div>
             <div class="photo">
-              <img src="/images/desktop/image-gallery-milkbottles.jpg" alt="" />
+              <img src="./images/desktop/image-gallery-milkbottles.jpg" alt="" />
             </div>
             <div class="photo">
-              <img src="/images/desktop/image-gallery-cone.jpg" alt="" />
+              <img src="./images/desktop/image-gallery-cone.jpg" alt="" />
             </div>
           </div>
         </div>
       </div>
       <div class="footer" id="Footer">
         <div class="footer-info">
-          <img src="/images/logo-footer.svg" alt="logo" />
+          <img src="./images/logo-footer.svg" alt="logo" />
           <div class="footer-nav">
             <a href="#About">About</a>
             <a href="#Service">Services</a>
